--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,17 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-spring.batch.initialize-schema=ALWAYS
+#spring.datasource.url=jdbc:mysql://localhost:3306/gestion-commission
+
 server.port=8090
+
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=control_commission;portNumber=1433
+#spring.datasource.username=sa
+#spring.datasource.password=ohtman1979
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.datasource.hikari.auto-commit=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
+spring.batch.initialize-schema=ALWAYS
